# YaLox

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: GenerateBuildTime.cmake  GenerateVersion.cmake
src/: CMakeLists.txt  buildtime.hpp.in  version.hpp.in
src/yaclox/: CMakeLists.txt  chunk.c  chunk.h  common.h  debug.c  main.c  memory.c  memory.h  value.c  value.h
src/yalox/: CMakeLists.txt  aliases.hpp  astprinter.cpp  astprinter.hpp  countedptr.hpp  environment.cpp  environment.hpp  expr.cpp  expr.hpp  generate_ast.py  interpreter.cpp  interpreter.hpp  main.cpp  parser.cpp  parser.hpp  resolver.cpp  resolver.hpp  scanner.cpp  scanner.hpp  stmt.cpp  stmt.hpp  token.cpp  token.hpp  types.cpp  types.hpp  yalox.cpp  yalox.hpp
tests/: CMakeLists.txt  test_interpreter.cpp  test_parser.cpp  test_scanner.cpp
